--- a/app/views/finance/_student_fees_submission.html.erb
+++ b/app/views/finance/_student_fees_submission.html.erb
@@ -61,7 +61,7 @@
       <% @fee_particulars.each do |fee| %>
         <tr class="tr-<%= cycle("odd","even") %>">
           <td class="col-1"><%= i+=1 %></td>
-          <td class="col-2"><%= shorten_string(fee.name,50) %></td>
+          <td class="col-2"><%= fee.name %></td>
           <td class="col-6"><%= fee.amount%></td>
         </tr>
         <% total_fees += fee.amount %>
@@ -77,7 +77,7 @@
         <% @batch_discounts.each do |d| %>
           <tr class="tr-<%= cycle("odd","even") %>">
             <td class="col-1"><%= i+1 %></td>
-            <td class="col-2"><%= shorten_string(d.name,40) %></td>
+            <td class="col-2"><%= d.name %></td>
             <td class="col-6"><%= d.discount%> %</td>
           </tr>
           <% i += 1 %>
@@ -85,7 +85,7 @@
         <% @student_discounts.each do |d| %>
           <tr class="tr-<%= cycle("odd","even") %>">
             <td class="col-1"><%= i+1 %></td>
-            <td class="col-2"><%= shorten_string(d.name,40) %></td>
+            <td class="col-2"><%=d.name %></td>
             <td class="col-6"><%= d.discount%> %</td>
           </tr>
           <% i += 1 %>
@@ -93,7 +93,7 @@
         <% @category_discounts.each do |d| %>
           <tr class="tr-<%= cycle("odd","even") %>">
             <td class="col-1"><%= i+1 %></td>
-            <td class="col-2"><%= shorten_string(d.name,40) %></td>
+            <td class="col-2"><%= d.name %></td>
             <td class="col-6"><%= d.discount%> %</td>
           </tr>
           <% i += 1 %>
