--- a/app/views/news/view.erb
+++ b/app/views/news/view.erb
@@ -37,7 +37,7 @@
       <%= t('posted_on') %> <%= I18n.l(@news.created_at,:format=>"%A, %d %B, %Y") %>
     </div>
     <div id="news_content">
-      <%= sanitize @news.content , :tags => %w[b i a h1 h2 h3 u strike p img font span sup sub], :attributes => %w[href src style]%>
+      <%= sanitize @news.content , :tags => %w[b i a h1 h2 h3 u strike p img font span sup sub tr td table th tbody thead], :attributes => %w[href src style border cellspacing cellpadding]%>
     </div>
 
   <% if @current_user.admin? %>
