--- a/app/views/exam_groups/show.html.erb
+++ b/app/views/exam_groups/show.html.erb
@@ -89,7 +89,7 @@
                 <td class="col-1"><%= in_place_editor_field :exam, :maximum_marks,{},{:cols=>1} %></td>
                 <td class="col-1"><%= in_place_editor_field :exam, :minimum_marks,{},{:cols=>1} %></td>
                 <td class="col-1">
-                  <% unless @exam_group.result_published %>
+                  <% if @exam_group.result_published %>
                     <small><s><%= t('edit_text') %></s></small>
                   <% else %>
                     <small><%= link_to t('edit_text'), edit_exam_group_exam_path(@exam_group, exam) %></small>
