--- a/app/views/finance/_student_admission_particulars.html.erb
+++ b/app/views/finance/_student_admission_particulars.html.erb
@@ -20,5 +20,5 @@
 <div class="label-field-pair">
     <div class="label-container">
       <label> <%= t('admission_number') %> :</label></div>
-   <div class="input-container"> <%= text_field :finance_fee_particular,  :admission_no %></div>
+   <div class="input-container"> <%= text_field(:finance_fee_particular,:admission_no,{}) %></div>
 </div>
