--- a/public/stylesheets/exam/student_ranking_level_report_pdf.css
+++ b/public/stylesheets/exam/student_ranking_level_report_pdf.css
@@ -141,8 +141,74 @@ table#pdf-table{
     font-size: 18px;
 
 }
-.page-break td{
-    height: 240px;
+.page1 {
+    width:800px;
+    height: auto;
+    page-break-after: always;
+    page-break-inside: avoid;
+    clear: both;
+}
+.page-break1{
+    height: 20px;
     border: 1px solid #fff;
+    width:800px;
+    float: left;
+}
+.grand_total
+{
     border-bottom: 1px solid #ADACAB;
+}
+.section1{
+    page-break-before:always;
+    text-align: center;
+}
+.row{
+    float: left;
+    width: 100%;
+    text-align: center;
+}
+.page-blank{
+    width: 100%;
+    float: left;
+}
+.page_break{
+    margin-top: 60px;
+}
+.serial-td{
+    width:60px;
+    min-width:60px;
+    max-width:60px;
+    overflow:hidden;
+
+}
+.name-td{
+    width:auto;
+/*    min-width:180px;
+    max-width:180px;*/
+    overflow: hidden;
+}
+.adm-td{
+    width:80px;
+    min-width:80px;
+    max-width:80px;
+    overflow:hidden;
+}
+.batch-td{
+    width:130px;
+    min-width:130px;
+    max-width:130px;
+    overflow:hidden;
+}
+.serial-td1{
+    width:100px;
+    min-width:100px;
+    max-width:100px;
+    overflow:hidden;
+
+}
+.adm-td1{
+    width:160px;
+    min-width:160px;
+    max-width:160px;
+    overflow:hidden;
 }
