--- a/app/views/finance/fees_create.html.erb
+++ b/app/views/finance/fees_create.html.erb
@@ -29,6 +29,11 @@
   <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
 
     <div class="box">
+    <div class="bread_crumb">
+      <%= link_to t('finance_text'), :controller => "finance", :action=>"index" %> &raquo;
+      <%= link_to "#{t('fees_text')}", :controller => "finance", :action => "fees_index" %> &raquo;
+      <%= t('create_fees') %>
+    </div>
 
   <div class="link-box">
     <div class="link-heading"><%= link_to "#{t('master_fees')}", :action => "master_fees" %></div>
