--- a/app/views/finance/view_monthly_payslip.html.erb
+++ b/app/views/finance/view_monthly_payslip.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/show_finance.png") %>
+  <%= image_tag("/images/show_finance.png") %>
   <h1><%= t('finance_text') %></h1>
   <h3><%= t('department_wise_payslip') %></h3>
   <div id="app-back-button">
@@ -26,7 +26,11 @@
   </div>
 </div>
 <div id="page-yield">
-
+  <div class="bread_crumb">
+    <%= link_to t('finance_text'), :controller => "finance", :action=>"index" %> &raquo;
+    <%= link_to "#{t('payslip_text')}", :controller => "finance", :action => "payslip_index" %> &raquo;
+    <%= t('monthly_payslip') %>
+  </div>
   <% form_for :payslip do |f| %>
     <div id="box">
       <div class="label-field-pair">
