--- a/app/views/finance/approve_monthly_payslip.html.erb
+++ b/app/views/finance/approve_monthly_payslip.html.erb
@@ -21,14 +21,14 @@
 <script src="/javascripts/jquery-ui.min.js" type="text/javascript"></script>
 
 <script>
-$jq = jQuery.noConflict();
-$jq(document).ready(function() {
-  $jq("#salary_date").datepicker({dateFormat: 'yy-mm-dd'});
-});
+  $jq = jQuery.noConflict();
+  $jq(document).ready(function() {
+    $jq("#salary_date").datepicker({dateFormat: 'yy-mm-dd'});
+  });
 </script>
 
 <div id="content-header">
-<%= image_tag("/images/show_finance.png") %>
+  <%= image_tag("/images/show_finance.png") %>
   <h1><%= t('payslip_text') %></h1>
   <h3><%= t('approve_payslip') %></h3>
   <div id="app-back-button">
@@ -36,15 +36,20 @@ $jq(document).ready(function() {
   </div>
 </div>
 <div id="page-yield">
+  <div class="bread_crumb">
+    <%= link_to t('finance_text'), :controller => "finance", :action=>"index" %> &raquo;
+    <%= link_to "#{t('payslip_text')}", :controller => "finance", :action => "payslip_index" %> &raquo;
+    <%= t('aprove_monthly_payslip') %>
+  </div>
   <div class="box">
     <div class="label-field-pair">
       <label for="salary_date"><%= t('salary_month') %></label>
-    <div class="text-input-bg"><%= select :one_click_payslip, :salary_date, @salary_dates.map {|c| [c.salary_date.strftime("%B %Y"),c.salary_date.strftime("%Y-%m-%d")]},
-                                              {:prompt => t('select_month')},
-                                              {:onChange => "#{remote_function(:url => {:action=> "one_click_approve"},
-                                              :with => "'salary_date='+value")}"} %></div>
+      <div class="text-input-bg"><%= select :one_click_payslip, :salary_date, @salary_dates.map {|c| [c.salary_date.strftime("%B %Y"),c.salary_date.strftime("%Y-%m-%d")]},
+          {:prompt => t('select_month')},
+          {:onChange => "#{remote_function(:url => {:action=> "one_click_approve"},
+          :with => "'salary_date='+value")}"} %></div>
     </div>
 
-<div id ="approve"> </div>
-</div>
+    <div id ="approve"> </div>
   </div>
+</div>
